added links to blog posts and podcast

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Numan Khan</strong>, a senior <br />
 					studying Computer Science at Virginia Tech</h1>
-					<p>I enjoy building software such as web applications<br />
-					 and working with Natural Language Processing.</p>
+					<p>Here's some of the projects that I worked on in my <br />
+					 Writing and Digital Media class this semester</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">Start Here</a></li>
 					</ul>
 				</div>
 			</section>
@@ -34,14 +34,19 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Medium Blogs</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h4><p>Did you see the ending to Game of Thrones Season 8? Did it live up to the hype? Or did you feel unsatisfied? No matter if you're a fan of Game of Thrones or not, many popular TV shows have large fan...</p></blockquote>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h4><p>The dreaded Software Engineering (SWE) interview season is a time of joy and pain for students, but in reality it's hurting both students and recruiters. Here's a quick background on how SWE recruiting season works.</p></blockquote>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+							<!-- <p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p> -->
 						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
+						<!-- <div class="col-6 col-12-medium imp-medium">
+							<span class="image fit">
+								<p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/4639/39435522962_1a143b842d_b.jpg" alt="classes and subclasses [Day 3289]"><a href="https://www.flickr.com/photos/76281306@N00/39435522962">"classes and subclasses [Day 3289]"</a><span> by <a href="https://www.flickr.com/photos/76281306@N00">brianjmatis</a></span> is licensed under <a href="null?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a><
+							</span>
+						</div> -->
 					</div>
 				</div>
 			</section>
@@ -54,20 +59,19 @@
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
 								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
+								<!-- <li><span class="icon solid style3 major fa-camera-retro"></span></li> -->
+								<!-- <li><span class="icon solid style4 major fa-cog"></span></li> -->
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
+								<!-- <li><span class="icon solid style6 major fa-calendar"></span></li> -->
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>The Impact of the Coronavirus on the Gaming Industry</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>My podcast group thought that it would be best to create podcast about how Covid-19 has been impacting our lives. We ended up deciding to make our podcast about recent news within the gaming industry in light of Covid-19.</p>
+							<p>The range of topics we talk about are WHO's indecisiveness on video games to the Animal Crossing game that was released on the Nintendo Switch </p>
+							<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fuser-892170295-3005879%2Flyrebirds-podcast&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>
 						</div>
 					</div>
 				</div>
