--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
 							<header class="major">
 								<h2>Medium Blogs</h2>
 							</header>
-							<div class="row">
-							  <div class="column">
-									<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h4><p>Did you see the ending to Game of Thrones Season 8? Did it live up to the hype? Or did you feel unsatisfied? No matter if you're a fan of Game of Thrones or not, many popular TV shows have large fan...</p></blockquote>
-									<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-							  </div>
-							  <div class="column">
-									<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h4><p>The dreaded Software Engineering (SWE) interview season is a time of joy and pain for students, but in reality it's hurting both students and recruiters. Here's a quick background on how SWE recruiting season works.</p></blockquote>
-									<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-							  </div>
-							</div>
+
 
 
 							<!-- <p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p> -->
@@ -82,6 +73,16 @@
 						</div> -->
 					</div>
 				</div>
+				<div class="row">
+					<div class="column">
+						<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h4><p>Did you see the ending to Game of Thrones Season 8? Did it live up to the hype? Or did you feel unsatisfied? No matter if you're a fan of Game of Thrones or not, many popular TV shows have large fan...</p></blockquote>
+						<!-- <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script> -->
+					</div>
+					<div class="column">
+						<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h4><p>The dreaded Software Engineering (SWE) interview season is a time of joy and pain for students, but in reality it's hurting both students and recruiters. Here's a quick background on how SWE recruiting season works.</p></blockquote>
+						<!-- <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script> -->
+					</div>
+				</div>
 			</section>
 
 		<!-- Two -->
@@ -90,12 +91,13 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<!-- <li><span class="icon solid style1 major fa-code"></span></li> -->
+								<!-- <li><span class="icon solid style2 major fa-bolt"></span></li> -->
 								<!-- <li><span class="icon solid style3 major fa-camera-retro"></span></li> -->
 								<!-- <li><span class="icon solid style4 major fa-cog"></span></li> -->
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
+								<!-- <li><span class="icon solid style5 major fa-desktop"></span></li> -->
 								<!-- <li><span class="icon solid style6 major fa-calendar"></span></li> -->
+								<i class="fas fa-gamepad fa-10x"></i>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -103,8 +105,8 @@
 								<h2>The Impact of the Coronavirus on the Gaming Industry</h2>
 							</header>
 							<p>My podcast group thought that it would be best to create podcast about how Covid-19 has been impacting our lives. We ended up deciding to make our podcast about recent news within the gaming industry in light of Covid-19.</p>
-							<p>The range of topics we talk about are WHO's indecisiveness on video games to the Animal Crossing game that was released on the Nintendo Switch </p>
-							<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fuser-892170295-3005879%2Flyrebirds-podcast&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>
+							<p>The range of topics we talk about are World Health Organization's indecisiveness on whether video games are good for people to the new Animal Crossing game that was released on the Nintendo Switch.</p>
+							<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Faviciiofficial%2Fpreview-avicii-vs-lenny&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>
 						</div>
 					</div>
 				</div>
