added some video game font awesome icons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
   display: table;
   clear: both;
 }
+
+.img_container{
+    width:100px;
+    height:100px;
+    position:relative;
+    background:red;
+}
+
+.img_container2{
+    width:100px;
+    height:50px;
+    position:relative;
+    background:blue;
+}
+
+.icon-play-circle{
+    position:absolute;
+    top:45%;
+    left:45%;
+    color: white;
+}
 </style>
 </head>
 <body>
@@ -94,11 +115,14 @@
 								<!-- <li><span class="icon solid style1 major fa-code"></span></li> -->
 								<!-- <li><span class="icon solid style2 major fa-bolt"></span></li> -->
 								<!-- <li><span class="icon solid style3 major fa-camera-retro"></span></li> -->
-								<!-- <li><span class="icon solid style4 major fa-cog"></span></li> -->
-								<!-- <li><span class="icon solid style5 major fa-desktop"></span></li> -->
-								<!-- <li><span class="icon solid style6 major fa-calendar"></span></li> -->
-								<i class="fas fa-gamepad fa-10x"></i>
-							</ul>
+								<!-- <li><span class="icon solid style4 major fa-cog"></span></li>
+								<li><span class="icon solid style5 major fa-desktop"></span></li>
+								<li><span class="icon solid style6 major fa-calendar"></span></li> -->
+								<li><i class="fab fa-steam fa-6x"></i></li>
+								<li><i class="fas fa-gamepad fa-6x"></i></li>
+								<li><i class="fab fa-playstation fa-6x"></i></li>
+								<li><i class="fab fa-xbox fa-6x"></i></li>
+              </ul>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
