added anchor tag for soundcloud podcast

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 							</header>
 							<p>My podcast group thought that it would be best to create podcast about how Covid-19 has been impacting our lives. We ended up deciding to make our podcast about recent news within the gaming industry in light of Covid-19.</p>
 							<p>The range of topics we talk about are World Health Organization's indecisiveness on whether video games are good for people to the new Animal Crossing game that was released on the Nintendo Switch.</p>
-							<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Faviciiofficial%2Fpreview-avicii-vs-lenny&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe>
-						</div>
+              <p>Check out our podcast on <a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast">SoundCloud</a>!</p>
+            </div>
 					</div>
 				</div>
 			</section>
