changed blog section format and added photos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Numan's ENGL 3844 Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -74,37 +74,51 @@
 				</div>
 			</section>
 
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Medium Blogs</h2>
-							</header>
+      <!-- One -->
+      <section id="one" class="main style1">
+        <header class="major">
+          <h1><b>Medium Blogs</b></h1>
+        </header>
+        <div class="container">
+          <div class="row gtr-150">
+            <div class="col-6 col-12-medium imp-medium">
+              <!-- <span class="image fit"><img src="images/pic01.jpg" alt="" /></span> -->
+              <span class="image fit">
+                <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/4639/39435522962_1a143b842d_b.jpg" alt="classes and subclasses [Day 3289]"><a href="https://www.flickr.com/photos/76281306@N00/39435522962">"classes and subclasses [Day 3289]"</a><span> by <a href="https://www.flickr.com/photos/76281306@N00">brianjmatis</a></span> is licensed under <a href="null?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a>
+              </span>
+
+            </div>
+            <div class="col-6 col-12-medium">
+              <header class="major">
+                <h2><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h2>
+
+              </header>
+              <p>Software engineering is popular career track in the present day with a unique interview process. But are these interview processes effective at evaluating college students?</p>
+            </div>
+
+          </div>
+        </div>
+        <div class="container">
+
+          <div class="row gtr-150">
+            <div class="col-6 col-12-medium">
+              <header class="major">
+                <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h2>
+              </header>
+              <p>We consume so much video content through a variety of streaming services. But what do these popular TV shows tell about us?</p>
+            </div>
+            <div class="col-6 col-12-medium imp-medium">
+              <span class="image fit">
+                <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://farm8.staticflickr.com/7452/14007733210_6969a52128.jpg" alt="NEW 5 MINUTE FLASH TRAILER!"><a href="https://www.flickr.com/photos/92461652@N07/14007733210">"NEW 5 MINUTE FLASH TRAILER!"</a><span> by <a href="https://www.flickr.com/photos/92461652@N07">AntMan3001</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-SA 2.0</a>
+              </span>
+            </div>
+          </div>
+        </div>
+
+      </section>
 
 
 
-							<!-- <p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p> -->
-						</div>
-						<!-- <div class="col-6 col-12-medium imp-medium">
-							<span class="image fit">
-								<p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/4639/39435522962_1a143b842d_b.jpg" alt="classes and subclasses [Day 3289]"><a href="https://www.flickr.com/photos/76281306@N00/39435522962">"classes and subclasses [Day 3289]"</a><span> by <a href="https://www.flickr.com/photos/76281306@N00">brianjmatis</a></span> is licensed under <a href="null?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-SA 2.0</a><
-							</span>
-						</div> -->
-					</div>
-				</div>
-				<div class="row">
-					<div class="column">
-						<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h4><p>Did you see the ending to Game of Thrones Season 8? Did it live up to the hype? Or did you feel unsatisfied? No matter if you're a fan of Game of Thrones or not, many popular TV shows have large fan...</p></blockquote>
-						<!-- <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script> -->
-					</div>
-					<div class="column">
-						<blockquote class="embedly-card"><h4><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h4><p>The dreaded Software Engineering (SWE) interview season is a time of joy and pain for students, but in reality it's hurting both students and recruiters. Here's a quick background on how SWE recruiting season works.</p></blockquote>
-						<!-- <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script> -->
-					</div>
-				</div>
-			</section>
 
 		<!-- Two -->
 			<section id="two" class="main style2">
