added more to blog descriptions

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 
       <!-- One -->
       <section id="one" class="main style1">
-        <header class="major">
-          <h1><b>Medium Blogs</b></h1>
-        </header>
+        
         <div class="container">
+			<header class="major">
+				<h1><b>Medium Blogs</b></h1>
+			</header>
           <div class="row gtr-150">
             <div class="col-6 col-12-medium imp-medium">
               <!-- <span class="image fit"><img src="images/pic01.jpg" alt="" /></span> -->
@@ -93,7 +94,10 @@
                 <h2><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h2>
 
               </header>
-              <p>Software engineering is popular career track in the present day with a unique interview process. But are these interview processes effective at evaluating college students?</p>
+              <p>Software engineering is a popular career track in the present day 
+				  with a very unique interview process. But are these interview 
+				  processes effective at evaluating college students? What can we
+				   do to improve them</p>
             </div>
 
           </div>
@@ -105,7 +109,11 @@
               <header class="major">
                 <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h2>
               </header>
-              <p>We consume so much video content through a variety of streaming services. But what do these popular TV shows tell about us?</p>
+              <p>We consume so much video content through a variety of streaming services 
+				  such as Netflix and HBO in the present day. Aside from the crazy fan 
+				  following and hype behind TV shows such as Game of Thrones, can we 
+				  extract some meaning form these TV shows? What draws us into these 
+				  popular TV shows and do can they tell about us?</p>
             </div>
             <div class="col-6 col-12-medium imp-medium">
               <span class="image fit">
