fixed some grammar

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				  such as Netflix and HBO in the present day. Aside from the crazy fan 
 				  following and hype behind TV shows such as Game of Thrones, can we 
 				  extract some meaning form these TV shows? What draws us into these 
-				  popular TV shows and do can they tell about us?</p>
+				  popular TV shows and what can they tell about us?</p>
             </div>
             <div class="col-6 col-12-medium imp-medium">
               <span class="image fit">
