added video section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- One -->
       <section id="one" class="main style1">
-        
+
         <div class="container">
 			<header class="major">
 				<h1><b>Medium Blogs</b></h1>
@@ -94,8 +94,8 @@
                 <h2><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h2>
 
               </header>
-              <p>Software engineering is a popular career track in the present day 
-				  with a very unique interview process. But are these interview 
+              <p>Software engineering is a popular career track in the present day
+				  with a very unique interview process. But are these interview
 				  processes effective at evaluating college students? What can we
 				   do to improve them</p>
             </div>
@@ -107,18 +107,19 @@
           <div class="row gtr-150">
             <div class="col-6 col-12-medium">
               <header class="major">
-                <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">3 Things That Popular TV Shows Tell About You</a></h2>
+                <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">Hidden Philosophical Meanings In 3 Popular Drama and Sci-Fi TV Shows</a></h2>
               </header>
-              <p>We consume so much video content through a variety of streaming services 
-				  such as Netflix and HBO in the present day. Aside from the crazy fan 
-				  following and hype behind TV shows such as Game of Thrones, can we 
-				  extract some meaning form these TV shows? What draws us into these 
+              <p>We consume so much video content through a variety of streaming services
+				  such as Netflix and HBO in the present day. Aside from the crazy fan
+				  following and hype behind TV shows such as Game of Thrones, can we
+				  extract some meaning form these TV shows? What draws us into these
 				  popular TV shows and what can they tell about us?</p>
             </div>
             <div class="col-6 col-12-medium imp-medium">
               <span class="image fit">
-                <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://farm8.staticflickr.com/7452/14007733210_6969a52128.jpg" alt="NEW 5 MINUTE FLASH TRAILER!"><a href="https://www.flickr.com/photos/92461652@N07/14007733210">"NEW 5 MINUTE FLASH TRAILER!"</a><span> by <a href="https://www.flickr.com/photos/92461652@N07">AntMan3001</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-SA 2.0</a>
+                <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/3529/3879454285_795d1a27b1_b.jpg" alt="DSC_5957"><a href="https://www.flickr.com/photos/39647236@N07/3879454285">"DSC_5957"</a><span> by <a href="https://www.flickr.com/photos/39647236@N07">slamto</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 2.0</a>
               </span>
+
             </div>
           </div>
         </div>
@@ -148,11 +149,15 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>The Impact of the Coronavirus on the Gaming Industry</h2>
+								<h2><a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast">The Impact of the Coronavirus on the Gaming Industry</a></h2>
 							</header>
-							<p>My podcast group thought that it would be best to create podcast about how Covid-19 has been impacting our lives. We ended up deciding to make our podcast about recent news within the gaming industry in light of Covid-19.</p>
-							<p>The range of topics we talk about are World Health Organization's indecisiveness on whether video games are good for people to the new Animal Crossing game that was released on the Nintendo Switch.</p>
-              <p>Check out our podcast on <a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast">SoundCloud</a>!</p>
+							<p>
+                My team's (Lyrebirds) podcast discusses recent news within the gaming industry in light of Covid-19.
+                The range of topics we talk about are World Health Organization's indecisiveness on
+                whether video games are good for people, next generation of console gaming, and the new Animal Crossing game
+                that was released on the Nintendo Switch.
+              </p>
+              <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/795394864&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-892170295-3005879" title="reidca2" target="_blank" style="color: #cccccc; text-decoration: none;">reidca2</a> · <a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast" title="Lyrebirds Podcast" target="_blank" style="color: #cccccc; text-decoration: none;">Lyrebirds Podcast</a></div>
             </div>
 					</div>
 				</div>
@@ -162,35 +167,20 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2><a href="https://youtu.be/g5dEODI1N9A">Build a News Dashboard With React JS</a></h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</div>
+          <p>
+              Given the current circumstances of Covid-19, there are tons of news
+              outlets generating countless articles and it can be overwhelming to
+              keep up with. The tutorial below steps through the process on how to
+              create a basic web application that uses a News API to build your own custom
+              news dashboard using React.
+          </p>
+          <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/g5dEODI1N9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          </div>
+
 				</div>
 			</section>
 
