made text content changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Numan Khan</strong>, a senior <br />
 					studying Computer Science at Virginia Tech</h1>
-					<p>Here's some of the projects that I worked on in my <br />
+					<p>Here are some of the projects that I worked on in my <br />
 					 Writing and Digital Media class this semester</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Start Here</a></li>
@@ -78,9 +78,9 @@
       <section id="one" class="main style1">
 
         <div class="container">
-			<header class="major">
+			<!-- <header class="major">
 				<h1><b>Medium Blogs</b></h1>
-			</header>
+			</header> -->
           <div class="row gtr-150">
             <div class="col-6 col-12-medium imp-medium">
               <!-- <span class="image fit"><img src="images/pic01.jpg" alt="" /></span> -->
@@ -91,13 +91,16 @@
             </div>
             <div class="col-6 col-12-medium">
               <header class="major">
-                <h2><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h2>
+                <h2><a href="https://medium.com/@numank/3-ways-the-software-engineering-interview-process-fails-college-students-and-the-software-industry-ab3c6f3b6fdc" target="_blank">3 Ways the Software Engineering Interview Process Fails College Students and the Software Industry</a></h2>
 
               </header>
-              <p>Software engineering is a popular career track in the present day
-				  with a very unique interview process. But are these interview
-				  processes effective at evaluating college students? What can we
-				   do to improve them</p>
+              <p>
+                Software engineering is a popular career track in the present day
+      				  with a very unique interview process. But are these interview
+      				  processes effective at evaluating college students? How can software companies
+                improve the interview process? How can colleges better prepare students for these
+                interview processes?
+				       </p>
             </div>
 
           </div>
@@ -107,13 +110,14 @@
           <div class="row gtr-150">
             <div class="col-6 col-12-medium">
               <header class="major">
-                <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037">Hidden Philosophical Meanings In 3 Popular Drama and Sci-Fi TV Shows</a></h2>
+                <h2><a href="https://medium.com/@numank/3-things-that-popular-tv-shows-tell-about-you-4a018ec4f037" target="_blank">Hidden Philosophical Meanings In 3 Popular Drama and Sci-Fi TV Shows</a></h2>
               </header>
-              <p>We consume so much video content through a variety of streaming services
-				  such as Netflix and HBO in the present day. Aside from the crazy fan
-				  following and hype behind TV shows such as Game of Thrones, can we
-				  extract some meaning form these TV shows? What draws us into these
-				  popular TV shows and what can they tell about us?</p>
+              <p>
+                I know many can relate to the feeling of analyzing the smallest details of your favorite shows.
+                You can often end up discovering a hidden theme or easter egg that can lead to some interesting
+                discussions with your best friends. Three drama/sci-fi shows that I feel this way about are
+                Mr.Robot, Westworld, and Altered Carbon.
+              </p>
             </div>
             <div class="col-6 col-12-medium imp-medium">
               <span class="image fit">
@@ -149,11 +153,11 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2><a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast">The Impact of the Coronavirus on the Gaming Industry</a></h2>
+								<h2><a href="https://soundcloud.com/user-892170295-3005879/lyrebirds-podcast" target="_blank">The Impact of the Coronavirus on the Gaming Industry</a></h2>
 							</header>
 							<p>
-                My team's (Lyrebirds) podcast discusses recent news within the gaming industry in light of Covid-19.
-                The range of topics we talk about are World Health Organization's indecisiveness on
+                For the podcast project, my team's podcast discussed recent news within the gaming industry in light of Covid-19.
+                The range of topics we talked about are World Health Organization's indecisiveness on
                 whether video games are good for people, next generation of console gaming, and the new Animal Crossing game
                 that was released on the Nintendo Switch.
               </p>
@@ -176,7 +180,7 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2><a href="https://youtu.be/g5dEODI1N9A">Build a News Dashboard With React JS</a></h2>
+						<h2><a href="https://youtu.be/g5dEODI1N9A" target="_blank">Build a News Dashboard With React JS</a></h2>
 					</header>
           <p>
               Given the current circumstances of Covid-19, there are tons of news
