made grammar change reccommended by prof

--- a/index.html
+++ b/index.html
@@ -183,11 +183,9 @@
 						<h2><a href="https://youtu.be/g5dEODI1N9A" target="_blank">Build a News Dashboard With React JS</a></h2>
 					</header>
           <p>
-              Given the current circumstances of Covid-19, there are tons of news
-              outlets generating countless articles and it can be overwhelming to
-              keep up with. The tutorial below steps through the process on how to
-              create a basic web application that uses a News API to build your own custom
-              news dashboard using React.
+              News outlets are generating an overwhelming amount of COVID-19 coverage. You can make
+              your own custom news dashboard using the tutorial below which steps through the process on how to
+              create a basic web application with News API and React.
           </p>
           <div>
             <iframe width="500" height="275" src="https://www.youtube.com/embed/g5dEODI1N9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
