updated YouTube video

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               create a basic web application with News API and React.
           </p>
           <div>
-            <iframe width="500" height="275" src="https://www.youtube.com/embed/g5dEODI1N9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="500" height="275" src="https://youtu.be/C2TUTBsSJis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
           <br/>
