--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2><a href="https://www.youtube.com/embed/C2TUTBsSJis" target="_blank">Build a News Dashboard With React JS</a></h2>
+						<h2><a href="https://youtu.be/C2TUTBsSJis" target="_blank">Build a News Dashboard With React JS</a></h2>
 					</header>
           <p>
               News outlets are generating an overwhelming amount of COVID-19 coverage. You can make
