--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
       <section class="panel">
         <h2>> contact</h2>
         <p>
-          Want to chat about backend systems, data engineering, or running?
+          Want to chat about backend systems, data engineering, machine learning, or running?
         </p>
         <ul class="contact-list">
-          <li>
+          <!-- <li>
             <span class="label">email:</span>
             <a href="mailto:youremail@example.com">youremail@example.com</a>
-          </li>
+          </li> -->
           <li>
             <span class="label">github:</span>
             <a href="https://github.com/numankh" target="_blank">
