Updating name in footer

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
 
     <footer class="footer">
-      <span>© <span id="year"></span> Your Name</span>
+      <span>© <span id="year"></span>Numan Khan</span>
       <span class="sep">|</span>
       <span>Made with &lt;3 and a CRT monitor</span>
     </footer>
